# fuzzy-system

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  sketches.py
cli/: commands.py  interpreter.py
core/: exceptions.py  utils.py
core/models/: airline_history.py  flight.py  flight_shared.py  passenger.py  passenger_flight.py
tests/: utils_test.py
