[tool.poetry]
name = "quantexa"
version = "0.1.0"
description = ""
authors = ["Miguel Ortigosa <cestlarumba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pre-commit = "^2.20.0"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
